syntax = "proto3";

package proto;
option go_package = "/proto";

message Image {
  string sha256 = 1;
  int32 size = 2;
  int32 chunkSize = 3;
  repeated Chunk chunks = 4;
}

message Chunk {
  int32 iD = 1;
  int32 size = 2;
  string data = 3;
}

message ImageRequest {
  string sha256 = 1;
}

message ImageResponse {
  Image image = 1;
}

service AsciiArtService {
  rpc GetImage(ImageRequest) returns (ImageResponse);
}